# fortune_crawler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build_linux.yml  build_windows.yml
Assets/: license.txt
Assets/Music/: about.txt
src/: app.cpp  app.hpp  common.cpp  common.hpp  entity.cpp  entity.hpp  event_screens.cpp  event_screens.hpp  level.cpp  level.hpp  loader.cpp  loader.hpp  main.cpp  mapgen.cpp  mapgen.hpp  menus.cpp  menus.hpp  platform.cpp  platform.hpp  scenes.cpp  scenes.hpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  sprite.cpp  sprite.hpp  ui.cpp  ui.hpp  utility.cpp  utility.hpp
src/linux/: platform_linux.cpp  platform_linux.hpp
src/macos/: Info.plist.in  platform_macos.h  platform_macos.mm
src/windows/: platform_windows.cpp  platform_windows.hpp
